operator/2.6/howto-couchbase-upgrade.md
---
title: Upgrade a Couchbase Deployment
pubDate: 2026-08-17T09:53:44.266Z
antora:
  editUrl: https://github.com/couchbase/docs-operator/edit/release/2.6/modules/ROOT/pages/howto-couchbase-upgrade.adoc
  xref: xref:2.6@operator::howto-couchbase-upgrade.adoc[]
---

[Consult the llms.txt file for a full list of contents](/llms.txt)
[View original HTML](/operator/2.6/howto-couchbase-upgrade.html)

# Upgrade a Couchbase Deployment

> How-to upgrade Couchbase Server to a newer version. 

Given the existing configuration:

```yaml
apiVersion: couchbase.com/v2
kind: CouchbaseCluster
spec:
  image: couchbase/server:7.0.0 (1)
```

| **1** | [couchbaseclusters.spec.image](resource/couchbasecluster.md#couchbaseclusters-spec-image) can be modified to any valid Couchbase Server image, in this example we want to upgrade the version only. |
| ----- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

```yaml
apiVersion: couchbase.com/v2
kind: CouchbaseCluster
spec:
  image: couchbase/server:7.1.3 (1)
```

| **1** | The modification will trigger the Operator to detect that existing pod specifications do not match the new pod specifications. This will perform a [rolling upgrade](concept-upgrade.md#upgrading-couchbase-server) of Couchbase Server. |
| ----- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |

## [](#delta-recovery)Delta Recovery

Given the existing configuration:

```yaml
apiVersion: couchbase.com/v2
kind: CouchbaseCluster
spec:
  image: couchbase/server:7.0.0
  upgradeProcess: DeltaRecovery (1)
```

| **1** | This field will inform the operator that we want to perform an in-place upgrade of the existing pods. |
| ----- | ----------------------------------------------------------------------------------------------------- |

```yaml
apiVersion: couchbase.com/v2
kind: CouchbaseCluster
spec:
  image: couchbase/server:7.1.3 (1)
  upgradeProcess: DeltaRecovery
```

| **1** | The Operator will detect that existing pod specifications do not match the new pod specifications and trigger an in-place upgrade. |
| ----- | ---------------------------------------------------------------------------------------------------------------------------------- |